# translate-srt-mcp

./: .gitignore  .mise.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
modules/: __init__.py  config_handler.py  error_handler.py  models.py  srt_parser.py  translator.py
tests/: sample.srt  test_srt_parser.py  test_translator.py
translate_srt_mcp/: __init__.py  __main__.py  main.py
