[project]
name = "translate-srt-mcp"
version = "0.1.0"
description = "SRT字幕を日本語に翻訳するMCPサーバー"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "srt", "subtitle", "translation", "lm-studio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.27.0",
    "chardet>=5.0.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
translate-srt-mcp = "translate_srt_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
